src/test/resources/purescript_examples/failing/ImportHidingModule.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith ImportHidingModule\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('B')
          PsiElement(whitespace)(' ')
        PsiElement(hiding)('hiding')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSProperNameImpl(ImportModuleName)
            PsiElement(module)('module')
            PsiElement(whitespace)(' ')
            PSProperNameImpl(Qualified)
              PsiElement(proper name)('A')
        PsiElement())(')')
        PsiElement(whitespace)('\n')
